def neo4jVersion = "2.2.4"

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'idea'

import org.slf4j.Logger
import org.slf4j.LoggerFactory

mainClassName = 'org.main.JDriveMain'
sourceCompatibility = 1.8
targetCompatibility = 1.8
version = '1.0'

applicationDefaultJvmArgs = ["-Dgreeting.language=en"]

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compile     'com.google.api-client:google-api-client:1.20.0'
    compile     'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
    compile     'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
    compile     'javax.inject:javax.inject:1'
    compile     'com.google.inject:guice:4.0'
    compile     'aopalliance:aopalliance:1.0'
    compile     'com.google.inject:guice-parent:4.0'
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'



    compile "org.neo4j:neo4j:${neo4jVersion}"

//    compile     'net.java.dev.jna:jna:4.1.0'
//    compile     'net.java.dev.jna:jna-platform:4.1.0'
//    compile     'com.googlecode.concurrentlinkedhashmap:concurrentlinkedhashmap-lru:1.4.2'
    compile     'junit:junit:4.12'
    compile     fileTree( dir: 'libs', include: '*.jar')

    testCompile group: 'junit', name: 'junit', version: '4.+'
    testCompile 'org.neo4j:neo4j-kernel:2.2.4'
    testCompile 'org.neo4j:neo4j-io:2.2.4'
    testCompile 'org.hamcrest:hamcrest-all:1.3'
    testCompile 'org.jukito:jukito:1.4.1'
    testCompile 'org.mockito:mockito-all:1.10.19'
    testCompile 'org.easymock:easymock:3.3.1'
}

//dependencies {
//    runtime module("com.google.jimfs:jimfs:1.0") {
//        dependency("com.google.guava:guava:r01") {
//            transitive = true
//        }
//    }
//}

sourceSets {
    main {
        output.resourcesDir = "build/resources/"
    }
}

test {
    println "Test task"
    // enable TestNG support (default is JUnit)
    useJUnit() {
        environment 'env', 'test'
    }

//    // set a system property for the test JVM(s)
//    systemProperty 'some.prop', 'value'
//
//    // explicitly include or exclude tests
//    include 'org/foo/**'
//    exclude 'org/boo/**'

    systemProperty 'logback.configurationFile', 'logback.xml'

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    // jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
    onOutput { descriptor, event ->
        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
    }
}

run {
    systemProperty 'logback.configurationFile', 'logback.xml'
}


//gradle -Dtest.single=TreeBuilderTest test